--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   image_picker: ^1.0.7
   firebase_storage: ^11.6.10
   intl: ^0.19.0
+  persistent_shopping_cart: ^0.0.7
+  flutter_onboarding_slider: ^1.0.11
+  razorpay_flutter: ^1.3.6
 
 dev_dependencies:
   flutter_test:
